Get, Post and Delete  category api are added
