# src/models/Category.ts
@@ -1,4 +1,5 @@
 import { Column, CreateDateColumn, Entity, PrimaryGeneratedColumn, UpdateDateColumn } from "typeorm";
+import { CategoryType } from "./enums";
 
 @Entity()
 export class Category {
@@ -7,6 +8,15 @@ export class Category {
 
     @Column()
     name: string;
+
+    @Column('enum', {enum: CategoryType})
+    type: CategoryType;
+
+    @Column()
+    description: string;
+
+    @Column()
+    commissionRate: number;
 
     @CreateDateColumn()
     createdAt!: Date;
